# kave

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  test.sh
.github/workflows/: build.yml
certs/: openssl.cnf
certs/defaults/: cert.pem  key.pem  public-key.pem
src/: client.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  proto.rs  server.rs  utils.rs
src/server/: client.rs  cluster.rs  mod.rs
src/store/: lsm.rs  mod.rs
src/store/lsm/: commit_log.rs  sstable.rs
tests/: test_client_server.rs  test_cluster_server.rs  test_crypto.rs
tests/utils/: mod.rs
