[package]
name = "kave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli arg parser
# https://github.com/clap-rs/clap
clap = { version = "3", features = ["cargo"] }
# async io
# https://docs.rs/tokio/latest/tokio/
# https://tokio.rs/tokio/tutorial/hello-tokio
tokio = { version = "1", features = ["full"]}
# tokio tls support
# https://github.com/tokio-rs/tls/tree/master/tokio-rustls
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"] }
# pem file parser to load ssl key/cert files
# https://github.com/rustls/pemfile
rustls-pemfile = "1"
# error conveniences
# https://docs.rs/thiserror/latest/thiserror/
thiserror = "1"
# global static values
# https://docs.rs/lazy_static/latest/lazy_static/
lazy_static = "1"
# structured logging
# https://docs.rs/tracing/latest/tracing/
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt", "std", "json"] }
# https://docs.rs/uuid/latest/uuid/
uuid = { version = "1", features = ["v4", "serde"] }
# date / time
# https://docs.rs/chrono/latest/chrono/
chrono = "0.4"
# https://docs.rs/dotenv/latest/dotenv/
dotenv = "0.15"
# encoding
# https://docs.rs/base64/latest/base64/
base64 = "0.13"
# crypto primitives
# https://docs.rs/ring/latest/ring/
ring = "0.16"
# de/serialization
# https://docs.rs/serde/latest/serde/
serde = { version = "1", features = ["derive"] }
# https://docs.serde.rs/serde_json/
serde_json = "1"
# cache decorators and stores
# https://docs.rs/latest/cached
cached = "0.34"
# support async traits
# https://docs.rs/async-trait/latest/async_trait/
async-trait = "0.1"
# non-panicking synchronization types
# https://docs.rs/parking_lot/latest/parking_lot/
parking_lot = "0.12"
# bloom filter implementation
# https://docs.rs/growable-bloom-filter/2.0.1
growable-bloom-filter = "2.0.1"
# An efficient ser/de format
# https://docs.rs/bincode/latest/bincode/
bincode = "1.3.3"
# utilties for iterables
# https://docs.rs/itertools/0.10.3
itertools = "0.10.3"
# byte array wrapper types
# https://docs.rs/bytes/1.1.0
bytes = "1.1.0"
# https://docs.rs/trust-dns-resolver/latest/trust_dns_resolver/
trust-dns-resolver = "0.21"

[dev-dependencies]
# map literal macros
# https://docs.rs/maplit/latest/maplit/
maplit = "1.0.2"
# pattern-matching assertions
# https://docs.rs/assert_matches/1.5.0
assert_matches = "1.5.0"
